--- a/testing.ipynb
+++ b/testing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -36,91 +36,113 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>from_id</th>\n",
-       "      <th>startx</th>\n",
-       "      <th>starty</th>\n",
-       "      <th>to_id</th>\n",
-       "      <th>endx</th>\n",
-       "      <th>endy</th>\n",
-       "      <th>id</th>\n",
+       "      <th>1</th>\n",
+       "      <th>3</th>\n",
+       "      <th>5</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "      <th>12</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>21</th>\n",
+       "      <th>18</th>\n",
+       "      <th>83</th>\n",
+       "      <th>125</th>\n",
+       "      <th>20</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>83</td>\n",
-       "      <td>0.031883</td>\n",
-       "      <td>37.244595</td>\n",
-       "      <td>109</td>\n",
-       "      <td>0.152363</td>\n",
-       "      <td>37.367390</td>\n",
-       "      <td>1</td>\n",
+       "      <td>30.479997</td>\n",
+       "      <td>22.146976</td>\n",
+       "      <td>18.086165</td>\n",
+       "      <td>22.815879</td>\n",
+       "      <td>19.003438</td>\n",
+       "      <td>17.693505</td>\n",
+       "      <td>23.494402</td>\n",
+       "      <td>39.173676</td>\n",
+       "      <td>21.881460</td>\n",
+       "      <td>31.039582</td>\n",
+       "      <td>20.426507</td>\n",
+       "      <td>23.212596</td>\n",
+       "      <td>17.671027</td>\n",
+       "      <td>10.616947</td>\n",
+       "      <td>15.623098</td>\n",
+       "      <td>26.359239</td>\n",
+       "      <td>17.544650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>109</td>\n",
-       "      <td>0.152363</td>\n",
-       "      <td>37.367390</td>\n",
-       "      <td>83</td>\n",
-       "      <td>0.198688</td>\n",
-       "      <td>37.375809</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6.317173</td>\n",
+       "      <td>7.635406</td>\n",
+       "      <td>7.837961</td>\n",
+       "      <td>7.358039</td>\n",
+       "      <td>6.710745</td>\n",
+       "      <td>5.814806</td>\n",
+       "      <td>6.583050</td>\n",
+       "      <td>6.948482</td>\n",
+       "      <td>6.721102</td>\n",
+       "      <td>11.363845</td>\n",
+       "      <td>7.210312</td>\n",
+       "      <td>7.462850</td>\n",
+       "      <td>9.542543</td>\n",
+       "      <td>10.387670</td>\n",
+       "      <td>5.940234</td>\n",
+       "      <td>9.692266</td>\n",
+       "      <td>10.093691</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>83</td>\n",
-       "      <td>0.198688</td>\n",
-       "      <td>37.375809</td>\n",
-       "      <td>116</td>\n",
-       "      <td>0.877909</td>\n",
-       "      <td>37.700359</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>116</td>\n",
-       "      <td>0.877909</td>\n",
-       "      <td>37.700359</td>\n",
-       "      <td>83</td>\n",
-       "      <td>0.920674</td>\n",
-       "      <td>37.607693</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>83</td>\n",
-       "      <td>0.920674</td>\n",
-       "      <td>37.607693</td>\n",
-       "      <td>3</td>\n",
-       "      <td>8.427683</td>\n",
-       "      <td>39.970711</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>3</td>\n",
-       "      <td>8.427683</td>\n",
-       "      <td>39.970711</td>\n",
-       "      <td>7</td>\n",
-       "      <td>19.412518</td>\n",
-       "      <td>28.095240</td>\n",
-       "      <td>6</td>\n",
+       "      <td>5371.873787</td>\n",
+       "      <td>5545.543246</td>\n",
+       "      <td>6979.523087</td>\n",
+       "      <td>1581.659480</td>\n",
+       "      <td>6161.249158</td>\n",
+       "      <td>2538.004868</td>\n",
+       "      <td>4470.798565</td>\n",
+       "      <td>5745.570420</td>\n",
+       "      <td>5516.365382</td>\n",
+       "      <td>4505.378400</td>\n",
+       "      <td>3916.342118</td>\n",
+       "      <td>3764.883425</td>\n",
+       "      <td>445.796807</td>\n",
+       "      <td>3.633367</td>\n",
+       "      <td>373.341638</td>\n",
+       "      <td>86.895488</td>\n",
+       "      <td>82.450454</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   from_id    startx     starty  to_id       endx       endy  id\n",
-       "0       83  0.031883  37.244595    109   0.152363  37.367390   1\n",
-       "1      109  0.152363  37.367390     83   0.198688  37.375809   2\n",
-       "2       83  0.198688  37.375809    116   0.877909  37.700359   3\n",
-       "3      116  0.877909  37.700359     83   0.920674  37.607693   4\n",
-       "4       83  0.920674  37.607693      3   8.427683  39.970711   5\n",
-       "5        3  8.427683  39.970711      7  19.412518  28.095240   6"
+       "             1            3            5            7            8  \\\n",
+       "0    30.479997    22.146976    18.086165    22.815879    19.003438   \n",
+       "1     6.317173     7.635406     7.837961     7.358039     6.710745   \n",
+       "2  5371.873787  5545.543246  6979.523087  1581.659480  6161.249158   \n",
+       "\n",
+       "             9           10           12           14           15  \\\n",
+       "0    17.693505    23.494402    39.173676    21.881460    31.039582   \n",
+       "1     5.814806     6.583050     6.948482     6.721102    11.363845   \n",
+       "2  2538.004868  4470.798565  5745.570420  5516.365382  4505.378400   \n",
+       "\n",
+       "            16           17          21         18          83        125  \\\n",
+       "0    20.426507    23.212596   17.671027  10.616947   15.623098  26.359239   \n",
+       "1     7.210312     7.462850    9.542543  10.387670    5.940234   9.692266   \n",
+       "2  3916.342118  3764.883425  445.796807   3.633367  373.341638  86.895488   \n",
+       "\n",
+       "          20  \n",
+       "0  17.544650  \n",
+       "1  10.093691  \n",
+       "2  82.450454  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +153,8 @@
     "team2df = pd.read_csv(\"./data/team2.csv\")\n",
     "team2df['id'] = range(1, len(team2df) + 1)\n",
     "\n",
-    "team1df"
+    "stats = pd.read_csv(\"./data/player_stats.csv\")\n",
+    "stats"
    ]
   },
   {
