--- a/testing.ipynb
+++ b/testing.ipynb
@@ -478,6 +478,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2 as cv2\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "img = cv2.imread('moon4.tif')\n",
+    "# cv2.imshow(\"img\",img)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def crop_and_save_image(image_path, output_folder, crop_size=(512, 512)):\n",
+    "    # Read the large image\n",
+    "    image = cv2.imread(image_path)\n",
+    "    if image is None:\n",
+    "        raise ValueError(f\"Image at path {image_path} could not be loaded.\")\n",
+    "\n",
+    "    print(image.shape)\n",
+    "    # Get the dimensions of the image\n",
+    "    height, width = image.shape[:2]\n",
+    "\n",
+    "    # Create the output folder if it doesn't exist\n",
+    "    if not os.path.exists(output_folder):\n",
+    "        os.makedirs(output_folder)\n",
+    "\n",
+    "    crop_height, crop_width = crop_size\n",
+    "    counter = 0\n",
+    "\n",
+    "    # Loop through the image and crop it\n",
+    "    for y in range(0, height, crop_height):\n",
+    "        for x in range(0, width, crop_width):\n",
+    "            # Calculate the end coordinates of the crop\n",
+    "            end_x = x + crop_width\n",
+    "            end_y = y + crop_height\n",
+    "\n",
+    "            # Ensure the cropped area doesn't exceed the image dimensions\n",
+    "            crop = image[y:min(end_y, height), x:min(end_x, width)]\n",
+    "\n",
+    "            # Generate the filename and save the cropped image\n",
+    "            filename = os.path.join(output_folder, f\"crop_{counter:04d}.png\")\n",
+    "            cv2.imwrite(filename, crop)\n",
+    "            counter += 1\n",
+    "\n",
+    "    print(f\"Saved {counter} cropped images to {output_folder}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10106, 1200, 3)\n",
+      "Saved 60 cropped images to moontest\n"
+     ]
+    }
+   ],
+   "source": [
+    "crop_and_save_image(image_path='moontest.png',output_folder='moontest')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adaptive_threshold_gaussian(image_path, output_path, max_value=255, block_size=11, C=2):\n",
+    "    \"\"\"\n",
+    "    Applies adaptive Gaussian thresholding to an image and saves the result.\n",
+    "\n",
+    "    :param image_path: Path to the input image file.\n",
+    "    :param output_path: Path to save the thresholded image.\n",
+    "    :param max_value: The maximum value to use with the THRESH_BINARY and THRESH_BINARY_INV thresholding types.\n",
+    "    :param block_size: Size of the local region (a square of block_size x block_size) used to calculate the threshold.\n",
+    "    :param C: A constant subtracted from the mean or weighted mean calculated.\n",
+    "    \"\"\"\n",
+    "    # Read the image in grayscale\n",
+    "    image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+    "    if image is None:\n",
+    "        raise ValueError(f\"Image at path {image_path} could not be loaded.\")\n",
+    "\n",
+    "    # Apply adaptive Gaussian thresholding\n",
+    "    _,thresholded_image = cv2.threshold(image,125, max_value, \n",
+    "                                             \n",
+    "                                              cv2.THRESH_BINARY )\n",
+    "    # Save the thresholded image\n",
+    "    cv2.imwrite(output_path, thresholded_image)\n",
+    "    print(f\"Thresholded image saved to {output_path}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thresholded image saved to output_videos/test.png\n"
+     ]
+    }
+   ],
+   "source": [
+    "adaptive_threshold_gaussian(image_path=\"./moontest/crop_0003.png\",output_path=\"output_videos/test.png\", block_size=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
