--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -36,113 +36,80 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>1</th>\n",
-       "      <th>3</th>\n",
-       "      <th>5</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>10</th>\n",
-       "      <th>12</th>\n",
-       "      <th>14</th>\n",
-       "      <th>15</th>\n",
-       "      <th>16</th>\n",
-       "      <th>17</th>\n",
-       "      <th>21</th>\n",
-       "      <th>18</th>\n",
-       "      <th>83</th>\n",
-       "      <th>125</th>\n",
-       "      <th>20</th>\n",
+       "      <th>from_id</th>\n",
+       "      <th>startx</th>\n",
+       "      <th>starty</th>\n",
+       "      <th>to_id</th>\n",
+       "      <th>endx</th>\n",
+       "      <th>endy</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>30.479997</td>\n",
-       "      <td>22.146976</td>\n",
-       "      <td>18.086165</td>\n",
-       "      <td>22.815879</td>\n",
-       "      <td>19.003438</td>\n",
-       "      <td>17.693505</td>\n",
-       "      <td>23.494402</td>\n",
-       "      <td>39.173676</td>\n",
-       "      <td>21.881460</td>\n",
-       "      <td>31.039582</td>\n",
-       "      <td>20.426507</td>\n",
-       "      <td>23.212596</td>\n",
-       "      <td>17.671027</td>\n",
-       "      <td>10.616947</td>\n",
-       "      <td>15.623098</td>\n",
-       "      <td>26.359239</td>\n",
-       "      <td>17.544650</td>\n",
+       "      <td>21</td>\n",
+       "      <td>17.370436</td>\n",
+       "      <td>60.942867</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18.166985</td>\n",
+       "      <td>67.480774</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6.317173</td>\n",
-       "      <td>7.635406</td>\n",
-       "      <td>7.837961</td>\n",
-       "      <td>7.358039</td>\n",
-       "      <td>6.710745</td>\n",
-       "      <td>5.814806</td>\n",
-       "      <td>6.583050</td>\n",
-       "      <td>6.948482</td>\n",
-       "      <td>6.721102</td>\n",
-       "      <td>11.363845</td>\n",
-       "      <td>7.210312</td>\n",
-       "      <td>7.462850</td>\n",
-       "      <td>9.542543</td>\n",
-       "      <td>10.387670</td>\n",
-       "      <td>5.940234</td>\n",
-       "      <td>9.692266</td>\n",
-       "      <td>10.093691</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18.166985</td>\n",
+       "      <td>67.480774</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.822186</td>\n",
+       "      <td>60.047794</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5371.873787</td>\n",
-       "      <td>5545.543246</td>\n",
-       "      <td>6979.523087</td>\n",
-       "      <td>1581.659480</td>\n",
-       "      <td>6161.249158</td>\n",
-       "      <td>2538.004868</td>\n",
-       "      <td>4470.798565</td>\n",
-       "      <td>5745.570420</td>\n",
-       "      <td>5516.365382</td>\n",
-       "      <td>4505.378400</td>\n",
-       "      <td>3916.342118</td>\n",
-       "      <td>3764.883425</td>\n",
-       "      <td>445.796807</td>\n",
-       "      <td>3.633367</td>\n",
-       "      <td>373.341638</td>\n",
-       "      <td>86.895488</td>\n",
-       "      <td>82.450454</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.822186</td>\n",
+       "      <td>60.047794</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10.112043</td>\n",
+       "      <td>38.459187</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10.112043</td>\n",
+       "      <td>38.459187</td>\n",
+       "      <td>125</td>\n",
+       "      <td>15.273972</td>\n",
+       "      <td>20.669970</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>125</td>\n",
+       "      <td>15.273972</td>\n",
+       "      <td>20.669970</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17.060165</td>\n",
+       "      <td>32.924568</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             1            3            5            7            8  \\\n",
-       "0    30.479997    22.146976    18.086165    22.815879    19.003438   \n",
-       "1     6.317173     7.635406     7.837961     7.358039     6.710745   \n",
-       "2  5371.873787  5545.543246  6979.523087  1581.659480  6161.249158   \n",
-       "\n",
-       "             9           10           12           14           15  \\\n",
-       "0    17.693505    23.494402    39.173676    21.881460    31.039582   \n",
-       "1     5.814806     6.583050     6.948482     6.721102    11.363845   \n",
-       "2  2538.004868  4470.798565  5745.570420  5516.365382  4505.378400   \n",
-       "\n",
-       "            16           17          21         18          83        125  \\\n",
-       "0    20.426507    23.212596   17.671027  10.616947   15.623098  26.359239   \n",
-       "1     7.210312     7.462850    9.542543  10.387670    5.940234   9.692266   \n",
-       "2  3916.342118  3764.883425  445.796807   3.633367  373.341638  86.895488   \n",
-       "\n",
-       "          20  \n",
-       "0  17.544650  \n",
-       "1  10.093691  \n",
-       "2  82.450454  "
+       "   from_id     startx     starty  to_id       endx       endy  id\n",
+       "0       21  17.370436  60.942867      8  18.166985  67.480774   1\n",
+       "1        8  18.166985  67.480774     12   0.822186  60.047794   2\n",
+       "2       12   0.822186  60.047794     10  10.112043  38.459187   3\n",
+       "3       10  10.112043  38.459187    125  15.273972  20.669970   4\n",
+       "4      125  15.273972  20.669970     16  17.060165  32.924568   5"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,24 +120,24 @@
     "team2df = pd.read_csv(\"./data/team2.csv\")\n",
     "team2df['id'] = range(1, len(team2df) + 1)\n",
     "\n",
-    "stats = pd.read_csv(\"./data/player_stats.csv\")\n",
-    "stats"
+    "teamdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#now we need to find the average locations and counts of the passes\n",
     "average_locations = team2df.groupby('from_id').agg({'startx':['mean'],'starty':['mean','count']})\n",
-    "average_locations.columns = ['startx','starty','count']"
+    "average_locations.columns = ['startx','starty','count']\n",
+    "average_locations = average_locations.reset_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -194,44 +161,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>from_id</th>\n",
        "      <th>startx</th>\n",
        "      <th>starty</th>\n",
        "      <th>count</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>from_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
        "      <td>18.166985</td>\n",
        "      <td>67.480774</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
        "      <td>10.112043</td>\n",
        "      <td>38.459187</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
        "      <td>0.822186</td>\n",
        "      <td>60.047794</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>3</th>\n",
+       "      <td>21</td>\n",
        "      <td>17.370436</td>\n",
        "      <td>60.942867</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>125</th>\n",
+       "      <th>4</th>\n",
+       "      <td>125</td>\n",
        "      <td>15.273972</td>\n",
        "      <td>20.669970</td>\n",
        "      <td>1</td>\n",
@@ -241,16 +208,15 @@
        "</div>"
       ],
       "text/plain": [
-       "            startx     starty  count\n",
-       "from_id                             \n",
-       "8        18.166985  67.480774      1\n",
-       "10       10.112043  38.459187      1\n",
-       "12        0.822186  60.047794      1\n",
-       "21       17.370436  60.942867      1\n",
-       "125      15.273972  20.669970      1"
+       "   from_id     startx     starty  count\n",
+       "0        8  18.166985  67.480774      1\n",
+       "1       10  10.112043  38.459187      1\n",
+       "2       12   0.822186  60.047794      1\n",
+       "3       21  17.370436  60.942867      1\n",
+       "4      125  15.273972  20.669970      1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    20.0\n",
+      "Name: passpercent, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "totalpass = sum(average_locations['count'])\n",
+    "totalpass\n",
+    "passpercent = []\n",
+    "for i in average_locations['count']:\n",
+    "    passpercent.append(round(((i/totalpass)*100),2))\n",
+    "average_locations['passpercent'] = passpercent\n",
+    "passpercent = average_locations[average_locations['from_id'] == 8]['passpercent']\n",
+    "print(passpercent)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +343,7 @@
        "5      116     83           1"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +423,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +458,7 @@
     "\n",
     "#plot the arrows\n",
     "\n",
-    "arrows = pitch.arrows(1.2*pass_between.startx,.8*pass_between.starty,1.2*pass_between.startx_end,.8*pass_between.starty_end,\n",
+    "arrows = pitch.arrows(1.2*average_locations.startx,.8*average_locations.starty,1.2*pass_between.startx_end,.8*pass_between.starty_end,\n",
     "                     width = 5, headwidth = 5, color = 'w', ax = ax, zorder = 1, alpha = .5)\n",
     "\n",
     "#plot the nodes\n",
@@ -542,6 +533,17 @@
      "text": [
       "(10106, 1200, 3)\n",
       "Saved 60 cropped images to moontest\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
